--- a/src/Archmage/GameBundle/Resources/views/Kingdom/temple.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/temple.html.twig
@@ -15,14 +15,14 @@
             <div class="row">
                 <div class="col-xs-12 col-md-offset-3 col-md-6">
                     <div class="panel panel-default">
-                        <div class="panel-heading text-center">Rezar</div>
+                        <div class="panel-heading text-center">Orar</div>
                         <div class="panel-body text-responsive">
                             <div class="row">
                                 <div class="col-xs-4">
                                     <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/temple.jpg') }}">
                                 </div>
                                 <div class="col-xs-8 text-padded">
-                                    <div class="col-xs-12">Aquí puedes gastar 10 <span class="label label-extra">Turnos</span> y <span class="label label-extra">Oro</span> para intentar recibir una bendición o maldición aleatoria de uno de tus dioses. El éxito o fracaso depende de cuánto ofrezcas.</div>
+                                    <div class="col-xs-12">Aquí puedes gastar 10 <span class="label label-extra">Turnos</span> y <span class="label label-extra">Oro</span> para intentar recibir una bendición o maldición aleatoria de uno de tus dioses. El éxito o fracaso depende de cuánto ofrezcas. Si se sienten insultados, te arrepentirás...</div>
                                 </div>
                             </div>
                         </div>
@@ -30,7 +30,7 @@
                         <div class="panel-body text-responsive">
                             <div class="row">
                                 <div class="col-xs-12 text-center text-only">
-                                    ORO<sub>recaudado</sub> = ORO<sub>granjas</sub> * GRANJAS<sub>jugador</sub> * 2
+                                    ENCANTAMIENTO<sub>recibido</sub> = ORO<sub>ofrecido</sub> / ORO<sub>jugador</sub>
                                 </div>
                             </div>
                         </div>
