--- a/src/Archmage/GameBundle/Resources/views/resources.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/resources.html.twig
@@ -1,8 +1,8 @@
 <small class="text-responsive">
-    <i class="fa fa-fw fa-hourglass"></i>{{ player.turns|nf }}
-    <i class="fa fa-fw fa-money"></i>{{ player.gold|nf }}
-    <i class="fa fa-fw fa-users"></i>{{ player.people|nf }}
-    <i class="fa fa-fw fa-tint"></i>{{ player.mana|nf }}
-    <i class="fa fa-fw fa-magic"></i>{{ player.magic|nf }}
-    <i class="fa fa-fw fa-globe"></i>{{ player.lands|nf }}
+    <span class="label label-extra"><i class="fa fa-fw fa-hourglass"></i>{{ player.turns|nf }}</span>
+    <span class="label label-extra"><i class="fa fa-fw fa-money"></i>{{ player.gold|nf }}</span>
+    <span class="label label-extra"><i class="fa fa-fw fa-users"></i>{{ player.people|nf }}</span>
+    <span class="label label-extra"><i class="fa fa-fw fa-tint"></i>{{ player.mana|nf }}</span>
+    <span class="label label-extra"><i class="fa fa-fw fa-magic"></i>{{ player.magic|nf }}</span>
+    <span class="label label-extra"><i class="fa fa-fw fa-globe"></i>{{ player.lands|nf }}</span>
 </small>
