--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -35,7 +35,7 @@
         {% if error is defined and error %}
         <div class="col-xs-12 alert alert-danger alert-dismissible ribbon text-center text-responsive" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="close"><i class="fa fa-fw fa-times-circle"></i></button>
-            <i class="fa fa-fw fa-exclamation-triangle"></i>{{ error.messageKey }}
+            <i class="fa fa-fw fa-exclamation-triangle"></i>{{ error.message }}
         </div>
         {% endif %}
         {% for type, flashMessages in app.session.flashbag.all() %}
