--- a/src/Archmage/GameBundle/Resources/public/css/style.css
+++ b/src/Archmage/GameBundle/Resources/public/css/style.css
@@ -157,6 +157,7 @@ body {
     margin-bottom: 0px;
 }
 .form-signin .form-control {
+    border-radius: 6px;
     position: relative;
     font-size: 16px;
     height: auto;
@@ -165,13 +166,14 @@ body {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
+.form-signin .bootstrap-select {
+    padding: 0px !important;
+}
 .form-signin .form-control:focus {
     z-index: 2;
 }
 .form-signin input[type="text"] {
-    margin-bottom: -1px;
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
+    margin-top: 10px;
     border-top-style: solid;
     border-right-style: solid;
     border-bottom-style: none;
@@ -179,15 +181,26 @@ body {
     border-color: #000;
 }
 .form-signin input[type="password"] {
-    margin-bottom: 10px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
+    margin-top: -1px;
     border-top-style: none;
     border-right-style: solid;
     border-bottom-style: solid;
     border-left-style: solid;
     border-color: rgb(0,0,0);
     border-top:1px solid rgba(0,0,0,0.08);
+}
+.form-signin input[type="email"] {
+    margin-top: -1px;
+    border-top-style: none;
+    border-right-style: solid;
+    border-bottom-style: solid;
+    border-left-style: solid;
+    border-color: rgb(0, 0, 0);
+    border-top: 1px solid rgba(0, 0, 0, 0.08);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.08);
+}
+.form-signin button {
+    margin-top: 10px;
 }
 .form-signin-heading {
     color: #fff;
