Nuevos artefactos, sus skills y sus fixtures, hasta llegar a 20. Movido todo lo que era un servicio a ServiceController, como nf, nff y slug. Mejoradas todas las vistas. Ahora se encuentran artefactos gastando turnos, con base de 1% y 1% adicional por cada 200 gremios. Eliminado profile.xml del fosuserbundle, dejado solo register, password change y login. Eliminada familia Marinos y redistribuido sus miembros. Ahora los heroes tienen niveles y suben experiencia en base a los turnos. Ahora solo hay 1 tipo de ataque, normal.

--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -249,14 +249,14 @@
                         </div>
                         <div class="col-xs-8 text-padded">
                             {# row #}
-                            <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ artifact.skill.description|raw }}</div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-money"></i>{{ artifact.goldAuction|nf }}</div>
                             {# row #}
                             <div class="col-xs-12 text-lore"><small><i>"{{ artifact.lore }}"</i></small></div>
                         </div>
                     </div>
                 </div>
                 <div class="panel-footer text-center text-responsive">
-                    Se obtiene en la <span class="label label-extra">Subasta</span>.
+                    <i class="fa fa-fw fa-joomla"></i>{{ artifact.skill.description|raw }}
                 </div>
             </div>
         </div>
