--- a/src/Archmage/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Archmage/UserBundle/Resources/views/Security/login.html.twig
@@ -13,7 +13,9 @@
             <button type="submit" id="submit" name="_submit" class="btn btn-lg btn-default btn-block"><i class="fa fa-fw fa-lg fa-sign-in"></i>Entrar</button>
             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" />
         </form>
-        <a href="{{ path('fos_user_registration_register') }}">Registro</a> - <a href="{{ path('fos_user_resetting_request') }}">Password</a> - <a href="{{ path('archmage_game_home_help') }}">Ayuda</a>
+        <a href="{{ path('fos_user_registration_register') }}">Registro</a> -
+        {# <a href="{{ path('fos_user_resetting_request') }}">Password</a> - #}
+        <a href="{{ path('archmage_game_home_help') }}">Ayuda</a>
         <br/>
         <br/>
         <div class="row">
