--- a/src/Archmage/GameBundle/Resources/views/Account/message.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/message.html.twig
@@ -34,9 +34,9 @@
             </table>
             {# show message #}
             {% else %}
-                {% for i in 0..text['content']|length - 1 %}
-            <div class="col-xs-10 col-xs-offset-1 col-md-{{ text['content'][i]['length'] }} col-md-offset-{{ text['content'][i]['offset'] }} alert alert-{{ text['content'][i]['class'] }} ribbon text-{{ text['content'][i]['align'] }} text-responsive" role="alert">
-                <i class="fa fa-fw fa-exclamation-triangle"></i>{{ text['content'][i]['text'] }}
+                {% for i in 0..text|length - 1 %}
+            <div class="col-xs-10 col-xs-offset-1 col-md-{{ text[i]['length'] }} col-md-offset-{{ text[i]['offset'] }} alert alert-{{ text[i]['class'] }} ribbon text-{{ text[i]['align'] }} text-responsive" role="alert">
+                <i class="fa fa-fw fa-exclamation-triangle"></i>{{ text[i]['text'] }}
             </div>
                 {% endfor %}
             {#
