--- a/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
@@ -13,6 +13,24 @@
                 </h1>
             </div>
         </div>
+        <div class="col-xs-12 col-md-6 col-md-offset-3">
+            <div class="panel panel-default">
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-group"></i>Bla</div>
+                <div class="panel-body text-responsive">
+                    <div class="row">
+                        <div class="col-xs-4">
+                            <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/army.jpg') }}">
+                        </div>
+                        <div class="col-xs-8 text-padded">
+                            Bla
+                        </div>
+                    </div>
+                </div>
+                <div class="panel-footer text-center">
+                    Bla
+                </div>
+            </div>
+        </div>
         {% for troop in player.troops %}
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-{{ troop.unit.faction.class }}">
