--- a/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
@@ -13,6 +13,36 @@
                 </h1>
             </div>
         </div>
+        <div class="col-xs-12 col-md-6 col-md-offset-3">
+            <div class="panel panel-default" id="info">
+                <div class="panel-heading text-center">Defensa Mágica
+                    <button type="button" class="close" data-target="#info" data-dismiss="alert">
+                        <i class="fa fa-fw fa-lg fa-times-circle"></i>
+                    </button>
+                </div>
+                <div class="panel-body text-responsive">
+                    <div class="row">
+                        <div class="col-xs-4">
+                            <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/building/guild.jpg') }}">
+                        </div>
+                        <div class="col-xs-8 text-padded">
+                            <div class="col-xs-12">Aquí puedes gastar 1 <span class="label label-extra">Turno</span> y activar un <span class="label label-extra">Artefacto</span> sobre tu reino o un reino enemigo. Al igual que con los hechizos, puede que no consigas traspasar su <span class="label label-extra">Defensa Mágica</span>, suma de sus <span class="label label-extra">Barreras</span> y sus hechizos defensivos.</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel-middle text-center">Fórmula</div>
+                <div class="panel-body text-responsive">
+                    <div class="row">
+                        <div class="col-xs-12 text-center text-only">
+                            PROB<sub>éxito</sub> = MAX( 75, 100 - BARRERAS<sub>jugador</sub> * 1 / 100 )
+                        </div>
+                    </div>
+                </div>
+                <div class="panel-footer text-center">
+                    <a class="btn btn-default" href="{{ path( 'archmage_game_kingdom_auction' ) }}"><i class="fa fa-fw fa-money"></i><span class="hidden-xs">Subasta</span></a>
+                </div>
+            </div>
+        </div>
         {% for item in player.items if item.quantity > 0 %}
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-default">
@@ -58,7 +88,7 @@
         {% else %}
         <div class="container">
             <div class="col-xs-12 alert alert-danger ribbon text-responsive text-center" role="alert">
-                <i class="fa fa-fw fa-exclamation-triangle"></i> Actualmente no tienes artefactos en tu poder. Tal vez deberías comprar algunos en el <i class="fa fa-fw fa-user-secret"></i><a href="{{ path('archmage_game_kingdom_auction') }}">Mercado negro</a>.
+                <i class="fa fa-fw fa-exclamation-triangle"></i>Actualmente no tienes artefactos en tu poder. Tal vez deberías comprar algunos en el <i class="fa fa-fw fa-user-secret"></i><a href="{{ path('archmage_game_kingdom_auction') }}">Mercado negro</a>.
             </div>
         </div>
         {% endfor %}
